--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				                <h5 class="md-title">Connect</h5>
 				                <ul class="list-unstyled social-list">
 				                    <li><i class="fa fa-facebook"></i> <a target="_blank" href="https://www.facebook.com/billy.ngo.397">https://www.facebook.com/billy.ngo.397</a></li>
-				                    <li><i class="fa fa-linkedin"></i> <a target="_blank" href="https://www.linkedin.com/in/billy-ngo-8839793b">https://www.linkedin.com/in/billy-ngo-8839793b</a></li>
+				                    <li><i class="fa fa-linkedin"></i> <a target="_blank" href="https://www.linkedin.com/in/billy-ngo">https://www.linkedin.com/in/billy-ngo</a></li>
 				                </ul>				              
 				                <div class="mb30"></div>
 				            </div>
