--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script>
-            if (window.location.href==="https://billy.github.io")
+            if (window.location.href==="https://billytngo.github.io")
                 window.location.href = "https://www.cpp.edu/~ltngo";
         </script>
     </head>
