--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <script>
-            if (window.location.href==="https://billytngo.github.io")
-                window.location.href = "https://www.cpp.edu/~ltngo";
+            if (window.location.href==="https://billytngo.github.io/")
+                window.location.href = "https://www.cpp.edu/~ltngo/";
         </script>
     </head>
     <body>
